--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "async": "^1.5.0",
     "csv": "^0.4.6",
     "dotenv": "^2.0.0",
+    "jade": "^1.11.0",
     "keystone": "^4.0.0-beta.4",
     "lodash": "^4.13.1"
   },
