--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dotenv": "^2.0.0",
     "jade": "^1.11.0",
     "keystone": "^4.0.0-beta.4",
-    "lodash": "^4.13.1"
+    "lodash": "^4.13.1",
+    "slick-carousel": "^1.6.0"
   },
   "devDependencies": {
     "eslint": "^2.12.0",
