--- a/public/bower.json
+++ b/public/bower.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "lightgallery": "^1.3.9",
     "theia-sticky-sidebar": "^1.6.0",
-    "ammap3": "^3.21.1",
-    "amcharts3": "^3.21.1"
+    "highcharts": "^5.0.10"
   }
 }
