--- a/public/bower.json
+++ b/public/bower.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "lightgallery": "^1.3.9",
     "theia-sticky-sidebar": "^1.6.0",
-    "highcharts": "^5.0.10"
+    "highcharts": "^5.0.10",
+    "tablesorter": "jquery.tablesorter#^2.28.9",
+    "moment": "^2.18.1"
   }
 }
